--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 before_install:
   - echo "start creating an image with dockerfile"
-  - docker build -t guk0/docker-react-app -f Dockerfile.dev
+  - docker build -t guk0/docker-react-app -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true guk0/docker-react-app npm run test -- --coverage
